Set language level JDK 21